--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "@types/file-saver": "^2.0.7",
+    "@types/next-auth": "^3.13.0",
     "@types/xlsx": "^0.0.35",
     "file-saver": "^2.0.5",
     "next": "15.0.3",
+    "next-auth": "^5.0.0-beta.25",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
     "xlsx": "^0.18.5"
